--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.perfectomobile.instrumentedtest.gradleplugin'
+
+perfectoGradleSettings {
+    configFileLocation "configFile.json"
+}
+
 android {
     compileSdkVersion 33
     buildToolsVersion rootProject.buildToolsVersion
