--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,15 @@ buildscript {
         // Insert local test repo here
         google()
         mavenCentral()
+        maven {
+            url "https://repo1.perfectomobile.com/public/repositories/maven"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$agpVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.perfectomobile.instrumentedtest.gradleplugin:plugin:+'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
